force-app/main/default/objects/InvoiceLineProduct__c/InvoiceLineProduct__c.object-meta.xml
<CustomObject>
    <label>InvoiceLineProduct</label>
    <nameField>
        <displayFormat>ILP-{000}</displayFormat>
        <label>Invoice Line Product  No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InvoiceLineProducts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>