force-app/main/default/objects/InvoiceLineProduct__c/fields/Balanced_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Balanced_Quantity__c</fullName>
    <formula>Quantity__c  -  Invoice_Name__r.Invoiced_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balanced Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>