force-app/main/default/objects/InvoiceLineProduct__c/fields/Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Name__c</fullName>
    <label>Invoice Name</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>InvoiceLineProducts</relationshipLabel>
    <relationshipName>InvoiceLineProducts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>