force-app/main/default/objects/InvoiceLineProduct__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunitiescustom__c</referenceTo>
    <relationshipLabel>InvoiceLineProducts</relationshipLabel>
    <relationshipName>InvoiceLineProducts</relationshipName>
    <type>Lookup</type>
</CustomField>