force-app/main/default/objects/InvoiceLineProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>InvoiceLineProducts</relationshipLabel>
    <relationshipName>InvoiceLineProducts</relationshipName>
    <type>Lookup</type>
</CustomField>