force-app/main/default/objects/InvoiceLineProduct__c/fields/Sales_order_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_order_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales-order Name</label>
    <referenceTo>Salesorder__c</referenceTo>
    <relationshipLabel>InvoiceLineProducts</relationshipLabel>
    <relationshipName>InvoiceLineProducts</relationshipName>
    <type>Lookup</type>
</CustomField>