force-app/main/default/objects/InvoiceLineProduct__c/fields/Sales_orderline_item__c.field-meta.xml
<CustomField>
    <fullName>Sales_orderline_item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales-orderline item</label>
    <referenceTo>SalesorderLineProduct__c</referenceTo>
    <relationshipLabel>InvoiceLineProducts</relationshipLabel>
    <relationshipName>InvoiceLineProducts</relationshipName>
    <type>Lookup</type>
</CustomField>