force-app/main/default/objects/InvoiceLineProduct__c/fields/SGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>SGST_Amount__c</fullName>
    <formula>Discounted_Price__c  *  SGST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>