force-app/main/default/objects/InvoiceLineProduct__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <formula>( Discounted_Price__c  +  CGST_Amount__c  +  IGST_Amount__c  +  SGST_Amount__c )  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>